--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
+	<meta name="viewport" content="width=device-width, user-scalable=no initial-scale=1.0, maximum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Yamaguchi test</title>
 </head>
@@ -22,11 +23,11 @@
 				стол выдерживает нагрузку до 80 кг.
 			</p>
 			<div class="product__inner">
-				<img class="product__image product__image--table" src="http://placehold.it/332x268" alt="Картинка столешницы" />
-				<img class="product__image product__image--legs" src="http://placehold.it/332x268" alt="Картинка столешницы" />
+				<img class="product__image product__image--table" src="/src/assets/table@mobile.png" alt="Картинка столешницы">
+				<img class="product__image product__image--legs" src="/src/assets/table-legs@mobile.png" alt="Картинка столешницы">
 				<div class="product__btn-wrapper">
-					<button class="product__btn product__btn--accent" type="button">вверх</button>
-					<button class="product__btn product__btn--accent" type="button">вниз</button>
+					<button class="product__btn product__btn--accent product__btn--up" type="button">вверх</button>
+					<button class="product__btn product__btn--accent product__btn--down" type="button">вниз</button>
 				</div>
 			</div>
 			<p class="product__description">
